--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@headlessui/react": "^2.1.8",
     "@heroicons/react": "^2.1.5",
     "@mui/material": "^6.1.1",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,6 +20,9 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
     "react-spring": "^9.7.1",
+    "shadcn-ui": "^0.9.1",
+    "sweetalert2": "^11.14.1",
+    "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
