--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,52 +1,27 @@
 {
-  "name": "Cinema Browser && TvShow Guide for your next movie & tvshow",
-  "short_name": "Cinema Browser && TvShow Guide",
-  "theme_color": "#03304a",
-  "background_color": "#fca5a5",
-  "display": "browser",
-  "orientation": "portrait",
-  "scope": "/",
-  "start_url": "/",
+  "theme_color": "#c1b106",
+  "background_color": "#705e00",
   "icons": [
     {
-      "src": "images/icons/icon-72x72.png",
-      "sizes": "72x72",
-      "type": "image/png"
-    },
-    {
-      "src": "images/icons/icon-96x96.png",
-      "sizes": "96x96",
-      "type": "image/png"
-    },
-    {
-      "src": "images/icons/icon-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png"
-    },
-    {
-      "src": "images/icons/icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png"
-    },
-    {
-      "src": "images/icons/icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png"
-    },
-    {
-      "src": "images/icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "images/icons/icon-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png"
-    },
-    {
-      "src": "images/icons/icon-512x512.png",
+      "purpose": "maskable",
       "sizes": "512x512",
+      "src": "icon512_maskable.png",
+      "type": "image/png"
+    },
+    {
+      "purpose": "any",
+      "sizes": "512x512",
+      "src": "icon512_rounded.png",
       "type": "image/png"
     }
-  ]
+  ],
+  "orientation": "any",
+  "display": "standalone",
+  "dir": "auto",
+  "lang": "en-EN",
+  "name": "Cinema Browser && TvShow Guide for your next movie or tvshow",
+  "short_name": "Cinema Browser && TvShow Guide",
+  "start_url": "/",
+  "scope": "/",
+  "description": "This cinema browser is your guide to choose your next tv show or movie . it provided you with all information you need about your film with imdb rate "
 }
